--- a/youtube_clone.html
+++ b/youtube_clone.html
@@ -1,10 +1,9 @@
+<!DOCTYPE html>
 <html>
-<head>
+    <head>
 
-</head>
-<body>
-
-    
-</body>
-
+    </head>
+    <body>
+        
+    </body>
 </html>
